@@ -25,8 +25,9 @@
     <version>2.1.2.Final-SNAPSHOT</version>
 
     <properties>
-        <jvmArgs>-Xms512m -Xmx2g</jvmArgs>
-        <version.org.jberet>2.1.2.Final-SNAPSHOT</version.org.jberet>
+        <modular.jdk.args/>
+        <jvmArgs>-Xms512m -Xmx2g ${modular.jdk.args}</jvmArgs>
+        <version.org.jberet>${project.parent.version}</version.org.jberet>
         <version.org.mongojack>2.8.2</version.org.mongojack>
         <version.org.apache.kafka>0.9.0.0</version.org.apache.kafka>
         <version.net.sf.jasperreports>6.20.0</version.net.sf.jasperreports>
@@ -338,13 +339,33 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>${jvmArgs}</argLine>
+                    <argLine>${surefire.system.args}</argLine>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <profiles>
+        <profile>
+            <id>jdk17</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <modular.jdk.args>
+                    --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+                    --add-opens=java.base/java.io=ALL-UNNAMED
+                    --add-opens=java.base/java.lang=ALL-UNNAMED
+                    --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                    --add-opens=java.base/java.security=ALL-UNNAMED
+                    --add-opens=java.base/java.util=ALL-UNNAMED
+                    --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                    --add-opens=java.management/javax.management=ALL-UNNAMED
+                    --add-opens=java.naming/javax.naming=ALL-UNNAMED
+                </modular.jdk.args>
+            </properties>
+        </profile>
         <profile>
             <id>default</id>
             <activation>
